--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>TikTech</title>
-
+    <script>
+    csrf_token = '{{csrf_token()}}'
+    </script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
